--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -49,7 +49,7 @@
             <script>
                 window.onload = function() {
                     $('#botoMenu').click(function() {
-                        $('#menuLateral').toggle( "slide");
+                        $('#menuLateral').animate({width:'toggle'},245);
                 });    
                 };
             </script>
