--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,7 +39,7 @@
                 </ul>
             </div>
             {# contingut #}
-            <div class="col scroll">
+            <div class="col scroll h-100">
                 {% block body %}{% endblock %}
             </div>
         </div> 
