--- a/templates/usuari/index.html.twig
+++ b/templates/usuari/index.html.twig
@@ -4,7 +4,65 @@
 
 {% block body %}
 	<div class="card border-0 m-5">
-		<div class="card-header border-bottom bg-white d-flex justify-content-between p-0"><h1 class="h3">USUARIS</h1><button class="btn btn-link" onclick="window.history.back();"><i class="fas fa-arrow-left"></i> TORNAR</button></div>
+		<div class="card-header border-bottom bg-white d-flex justify-content-between p-0">
+			<h1 class="h3">USUARIS</h1><button class="btn btn-link" onclick="window.history.back();"><i class="fas fa-arrow-left"></i> TORNAR</button>
+		</div>
+		<div class="card-body">
+			<table class="table w-100" id="llistatUsuaris">
+				<thead class="custom-thead">
+					<tr>
+						<th>Nom</th>
+						<th>Nom d'usuari</th>
+						<th>Correu electrònic</th>
+						<th>Rol</th>
+						<th>Grup</th>
+						<th>Última connexió</th>
+						<th>Accions</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for usuari in usuaris %}
+					<tr>
+						<td>{{ usuari.nom }} {{ usuari.cognoms }}</td>
+						<td>{{ usuari.username }}</td>
+						<td>{{ usuari.email }}</td>
+						<td>
+							{% for rol in usuari.roles %}
+								{% if rol == 'ROLE_STUDENT' %}
+									Estudiant<br>
+								{% elseif rol == 'ROLE_TEACHER' %}
+									Professor<br>
+								{% elseif rol == 'ROLE_ADMIN' %}
+									Administrador<br>
+								{% endif %}
+							{% endfor %}
+						</td>
+						<td>
+							{% for grup in usuari.grups if grup %}
+								{{ grup.nom }}<br>
+							{% else %}
+								No assignat
+							{% endfor %}
+						</td>
+						<td>{{ usuari.lastLogin|date('d-m-Y H:i') }}</td>
+						<td></td>
+					</tr>
+					{% endfor %}
+				</tbody>
+			</table>
+		</div>
 	</div>
-
+	
+{% endblock %}
+{% block javascriptsBottom %}
+	{{ parent() }}
+	<script>
+		$(document).ready( function () {
+		    $('#llistatUsuaris').dataTable( {
+	            "language": {
+	                "url": "https://cdn.datatables.net/plug-ins/1.10.19/i18n/Catalan.json"
+	            }
+	        } );
+		} );
+	</script>
 {% endblock %}
