--- a/public/css/style.css
+++ b/public/css/style.css
@@ -95,8 +95,8 @@ html, body {
 }
 
 #footer {
-	background-color: #4ba5e5;
-	color: #fff;
+	background-color: #CFCFCF;
+	color: #515151;
 	font-size: 0.8rem;
 	padding: 1rem;
 	height: 62px;
@@ -115,12 +115,16 @@ html, body {
 /* fi base */
 
 /* taules */
-.custom-thead {
+table.dataTable.custom-table {
+	border-bottom: 5px solid #ffd966 !important;
+}
+
+.custom-table > thead {
 	background-color: #005a9e;
 	color: #fff;
 }
 
-.text-middle th, .text-middle td {
+.custom-table th, .custom-table td {
 	vertical-align: middle;
 }
 /* fi taules */
