--- a/templates/usuari/index.html.twig
+++ b/templates/usuari/index.html.twig
@@ -8,7 +8,7 @@
 			<h1 class="h3">USUARIS</h1><button class="btn btn-link" onclick="window.history.back();"><i class="fas fa-arrow-left"></i> TORNAR</button>
 		</div>
 		<div class="card-body">
-			<table class="table w-100 text-middle" id="llistatUsuaris">
+			<table class="table w-100 custom-table" id="llistatUsuaris">
 				<thead class="custom-thead">
 					<tr>
 						<th>Nom</th>
