--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,8 +10,8 @@
             <link rel="stylesheet" href="{{ asset('css/style.css') }}"/>
         {% endblock %}
         {% block javascriptsTop %}
-        <script src="{{ asset('bootstrap4/js/bootstrap.min.js') }}"></script>
         <script src="{{ asset('js/jquery.js') }}"></script>
+        <script src="{{ asset('bootstrap4/js/bootstrap.min.js') }}"></script>
         <script src="{{ asset('js/popper.js') }}"></script> 
         <script type="text/javascript" src="{{ asset('Datatables/datatables.min.js') }}"></script>     
         {% endblock %}
@@ -34,7 +34,7 @@
                 <ul id="menuList">
                     <li><a href="#"><i class="fas fa-home mr-2"></i>INICI</a></li>
                     <li class="{% if app.request.attributes.get('_route') == 'grups' %}active{% endif %}"><a href="#"><i class="fas fa-sitemap mr-2"></i>GRUPS</a></li>
-                    <li><a href="#"><i class="fas fa-users mr-2"></i>USUARIS</a></li>
+                    <li class="{% if app.request.attributes.get('_route') == 'usuaris' %}active{% endif %}"><a href="#"><i class="fas fa-users mr-2"></i>USUARIS</a></li>
                     <li><a href="#"><i class="fas fa-trophy mr-2"></i>PARTIDES</a></li>
                     <li><a href="#"><i class="fas fa-graduation-cap mr-2"></i>ENTRENAMENTS</a></li>
                     <li><a href="#"><i class="fas fa-question mr-2"></i>PREGUNTES</a></li>
