Commit random de css i twig de afegir

--- a/templates/grup/afegir.html.twig
+++ b/templates/grup/afegir.html.twig
@@ -4,7 +4,8 @@
 
 {% block body %}
 
-<h1>Afegir grup</h1>
+<div class="padding">
+<h1 class="">Afegir grup</h1>
 
 <form class="afegirgrup" action="" method="POST">
 
@@ -24,5 +25,5 @@
         <input type="submit" name="Submit" value="Afegir" />
 
     {{ form_end(form, {'render_rest': false}) }}
-
+</div>
 {% endblock %}
