--- a/public/css/style.css
+++ b/public/css/style.css
@@ -118,14 +118,12 @@ html, body {
     overflow: hidden;
 }
 
-.afegirgrup {
-    max-width: 900px;
-    margin: 0 auto;
-    display: block;
+.padding {
+	padding: 50px;
 }
 
 .afegirgrup input, .afegirgrup label {
-    width: 100%;
+    width: 35%;
     display: block;
 }
 
