--- a/templates/usuari/index.html.twig
+++ b/templates/usuari/index.html.twig
@@ -47,7 +47,7 @@
 						<td>{{ usuari.lastLogin|date('d-m-Y H:i') }}</td>
 						<td>
 							<button class="btn btn-link link-blue custom-btn-link assignarGrupBtn" data-id="{{ usuari.id }}" data-usuari="{{ usuari.nom }} {{ usuari.cognoms }}"><i class="fas fa-sitemap"></i></button>
-							<button class="btn btn-link link-orange custom-btn-link"><i class="fas fa-wrench"></i></button>
+							<button class="btn btn-link link-orange custom-btn-link assignarRolBtn" data-id="{{ usuari.id }}" data-usuari="{{ usuari.nom }} {{ usuari.cognoms }}"><i class="fas fa-wrench"></i></button>
 							<button class="btn btn-link link-red custom-btn-link"><i class="fas fa-trash-alt"></i></button>
 						</td>
 					</tr>
@@ -57,36 +57,37 @@
 		</div>
 	</div>
 
-<div id="assignarGrupModal" class="modal fade" tabindex="-1" role="dialog">
+<div id="assignarRolModal" class="modal fade" tabindex="-1" role="dialog">
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h5 class="modal-title" id="assignarGrupModalTitol"></h5>
+				<h6 class="modal-title" id="assignarRolModalTitol"></h6>
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
 			</div>
 			<div class="modal-body">
-				<div id="assignarGrupModalMsg"></div>
-				<div class="form-group">
-					<label for="rol">Selecciona un rol</label>
-					<select name="rol" id="rol" class="form-control">
-						<option value="">---</option>
-						{% for rol in rols|keys if rol != 'ROLE_SUPER_ADMIN' %}
-							<option value="{{ rol }}">
-								{% if rol == 'ROLE_STUDENT' %}
-									Estudiant
-								{% elseif rol == 'ROLE_TEACHER' %}
-									Professor
-								{% elseif rol == 'ROLE_ADMIN' %}
-									Administrador
-								{% endif %}
-							</option>
-						{% endfor %}
-					</select>
+				<div id="assignarRolModalMsg">
+					<div class="form-group">
+						<label for="rol">Selecciona un rol</label>
+						<select name="rol" id="rol" class="form-control">
+							<option value="">---</option>
+							{% for rol in rols|keys if rol != 'ROLE_SUPER_ADMIN' %}
+								<option value="{{ rol }}">
+									{% if rol == 'ROLE_STUDENT' %}
+										Estudiant
+									{% elseif rol == 'ROLE_TEACHER' %}
+										Professor
+									{% elseif rol == 'ROLE_ADMIN' %}
+										Administrador
+									{% endif %}
+								</option>
+							{% endfor %}
+						</select>
+					</div>
 				</div>
 			</div>
-			<div class="modal-footer" id="assignarGrupModalBtns">
+			<div class="modal-footer" id="assignarRolModalBtns">
 			</div>
 		</div>
 	</div>
@@ -104,27 +105,46 @@
 	            }
 	        });
 
-		    $('body').on( 'click', '.assignarGrupBtn', function() {
+		    $('body').on( 'click', '.assignarRolBtn', function() {
 		    	var id = $(this).data('id');
 		    	var usuari = $(this).data('usuari');
-		    	$('#assignarGrupModalTitol').html(`Assignar rol a <strong>${usuari}</strong>`);
-		    	var url = `{{ path('assignarRol', {'id' : '0'}) }}`;
-		    	url = url.replace("0", id);
-		    	$('#assignarGrupModalBtns').html(`<button class="cancelBtn btn btn-secondary mr-2">Cancel·lar</button><button id="grupAssignatBtn" class="btn btn-primary disabled">Continuar</button>`);
-		    	$('#assignarGrupModal').modal('show');
+		    	$('#assignarRolModalTitol').html(`Assignar rol a <strong>${usuari}</strong>`);
+		    	//var url = `{{ path('assignarRol', {'id' : '0', 'rol' : 'sense'}) }}`;
+		    	//url = url.replace("0", id);
+		    	$('#assignarRolModalBtns').html(`<button class="cancelBtn btn btn-secondary mr-2">Cancel·lar</button><button data-id="${id}" id="rolAssignatBtn" class="btn btn-primary disabled">Continuar</button>`);
+		    	$('#assignarRolModal').modal('show');
+
+		    	$('body').on('click', '#rolAssignatBtn', function() {
+		    		$.get()
+		    	});
 		    });
 
 		    $('body').on('click', '.cancelBtn', function()  {
-		    	$('#assignarGrupModal').modal('hide');
+		    	$('#assignarRolModal').modal('hide');
 		    });
 
 		    $('body').on('change', '#rol', function() {
 		    	if ($(this).val() != '') {
-		    		$('#grupAssignatBtn').removeClass('disabled');
+		    		$('#rolAssignatBtn').removeClass('disabled');
 		    	} else {
-		    		$('#grupAssignatBtn').addClass('disabled');
+		    		$('#rolAssignatBtn').addClass('disabled');
 		    	}
 		    });
+
+		    $('body').on('click', '#rolAssignatBtn', function(e) {
+		    	var id = $('#rolAssignatBtn').data('id');
+		    	var rol = $('#rol').val();
+		    	var url = `{{ path('assignarRol') }}`;
+		    	var data = `{ 'id': ${id}, 'rol': ${rol} }`;
+		    	$.post(url, data, assignacioRolCompleta).fail(errorAssignacioGrup);
+		    	e.preventDefault();
+		    });
+
+		    function assignacioRolCompleta() {
+		    	$('#assignarRolModalMsg').html(`Rol assignat correctament.`);
+		    	$('#assignarRolModalBtns').html(`<button class="cancelBtn btn btn-secondary mr-2">Acceptar</button>`);
+		    }
+
 		} );
 	</script>
 {% endblock %}
