assignar rol funcional

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,8 +33,8 @@
             <div id="menuLateral">
                 <ul id="menuList">
                     <li><a href="#"><i class="fas fa-home mr-2"></i>INICI</a></li>
-                    <li class="{% if app.request.attributes.get('_route') == 'grups' %}active{% endif %}"><a href="#"><i class="fas fa-sitemap mr-2"></i>GRUPS</a></li>
-                    <li class="{% if app.request.attributes.get('_route') == 'usuaris' %}active{% endif %}"><a href="#"><i class="fas fa-users mr-2"></i>USUARIS</a></li>
+                    <li class="{% if app.request.attributes.get('_route') == 'grups' %}active{% endif %}"><a href="{{ path('grups') }}"><i class="fas fa-sitemap mr-2"></i>GRUPS</a></li>
+                    <li class="{% if app.request.attributes.get('_route') == 'usuaris' %}active{% endif %}"><a href="{{ path('usuaris') }}"><i class="fas fa-users mr-2"></i>USUARIS</a></li>
                     <li><a href="#"><i class="fas fa-trophy mr-2"></i>PARTIDES</a></li>
                     <li><a href="#"><i class="fas fa-graduation-cap mr-2"></i>ENTRENAMENTS</a></li>
                     <li><a href="#"><i class="fas fa-question mr-2"></i>PREGUNTES</a></li>
