--- a/templates/usuari/index.html.twig
+++ b/templates/usuari/index.html.twig
@@ -57,7 +57,7 @@
 		</div>
 	</div>
 
-<div id="assignarRolModal" class="modal fade" tabindex="-1" role="dialog">
+<div id="assignarRolModal" class="modal fade" tabindex="-1" role="dialog" data-backdrop="static">
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
@@ -92,6 +92,34 @@
 		</div>
 	</div>
 </div>
+
+<div id="assignarGrupModal" class="modal fade" tabindex="-1" role="dialog" data-backdrop="static">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h6 class="modal-title" id="assignarGrupModalTitol"></h6>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body">
+				<div id="assignarGrupModalMsg">
+					<div class="form-group">
+						<label for="rol">Selecciona un grup</label>
+						<select name="grup" id="grup" class="form-control">
+							<option value="">---</option>
+							{% for grup in grups %}
+								<option value="{{ grup.id }}">{{ grup.nom }}</option>
+							{% endfor %}
+						</select>
+					</div>
+				</div>
+			</div>
+			<div class="modal-footer" id="assignarGrupModalBtns">
+			</div>
+		</div>
+	</div>
+</div>
 	
 {% endblock %}
 {% block javascriptsBottom %}
@@ -108,18 +136,12 @@
 		    $('body').on( 'click', '.assignarRolBtn', function() {
 		    	var id = $(this).data('id');
 		    	var usuari = $(this).data('usuari');
-		    	$('#assignarRolModalTitol').html(`Assignar rol a <strong>${usuari}</strong>`);
-		    	//var url = `{{ path('assignarRol', {'id' : '0', 'rol' : 'sense'}) }}`;
-		    	//url = url.replace("0", id);
-		    	$('#assignarRolModalBtns').html(`<button class="cancelBtn btn btn-secondary mr-2">Cancel·lar</button><button data-id="${id}" id="rolAssignatBtn" class="btn btn-primary disabled">Continuar</button>`);
+		    	$('#assignarRolModalTitol').html(`Assignar un rol a <strong>${usuari}</strong>`);
+		    	$('#assignarRolModalBtns').html(`<button class="cancelAssignarRolBtn btn btn-secondary mr-2">Cancel·lar</button><button data-id="${id}" id="rolAssignatBtn" class="btn btn-primary disabled">Continuar</button>`);
 		    	$('#assignarRolModal').modal('show');
-
-		    	$('body').on('click', '#rolAssignatBtn', function() {
-		    		$.get()
-		    	});
 		    });
 
-		    $('body').on('click', '.cancelBtn', function()  {
+		    $('body').on('click', '.cancelAssignarRolBtn', function()  {
 		    	$('#assignarRolModal').modal('hide');
 		    });
 
@@ -141,7 +163,7 @@
 		    			$('#assignarRolModalBtns').html(`<button class="reloadBtn btn btn-primary mr-2">Acceptar</button>`);
 		    			
 					})
-					.fail(errorAssignacioGrup);
+					.fail(errorAssignacioRol);
 		    	e.preventDefault();
 		    });
 
@@ -150,9 +172,48 @@
 		    	window.location.replace(reload);
 		    });
 
-		    function errorAssignacioGrup() {
+		    function errorAssignacioRol() {
 		    	$('#assignarRolModalMsg').html(`<div class="text-center"><i class="fas fa-exclamation-triangle mb-2" style="color: red; font-size: 40px"></i><div>Error! No ha sigut possible assignar el rol a l'usuari.</div></div>`);
-		    	$('#assignarRolModalBtns').html(`<button class="cancelBtn btn btn-primary mr-2">Acceptar</button>`);
+		    	$('#assignarRolModalBtns').html(`<button class="reloadBtn btn btn-primary mr-2">Acceptar</button>`);
+		    }
+
+		    $('body').on( 'click', '.assignarGrupBtn', function() {
+		    	var id = $(this).data('id');
+		    	var usuari = $(this).data('usuari');
+		    	$('#assignarGrupModalTitol').html(`Assignar un grup a <strong>${usuari}</strong>`);
+		    	$('#assignarGrupModalBtns').html(`<button class="cancelAssignarGrupBtn btn btn-secondary mr-2">Cancel·lar</button><button data-id="${id}" id="grupAssignatBtn" class="btn btn-primary disabled" data-toggle="popover" data-trigger="hover" data-content="Some content" data-placement="bottom">Continuar</button>`);
+		    	$('#assignarGrupModal').modal('show');
+		    });
+
+		    $('body').on('click', '.cancelAssignarGrupBtn', function()  {
+		    	$('#assignarGrupModal').modal('hide');
+		    });
+
+		    $('body').on('change', '#grup', function() {
+		    	if ($(this).val() != '') {
+		    		$('#grupAssignatBtn').removeClass('disabled');
+		    	} else {
+		    		$('#grupAssignatBtn').addClass('disabled');
+		    	}
+		    });
+
+		    $('body').on('click', '#grupAssignatBtn', function(e) {
+		    	var id = $('#grupAssignatBtn').data('id');
+		    	var grup = $('#grup').val();
+		    	var url = `{{ path('assignarGrup') }}`;
+		    	$.post(url, { 'idUsuari': id, 'grup': grup }) 
+		    		.done(function(response) {
+						$('#assignarGrupModalMsg').html(`<div class="text-center"><i class="fas fa-check mb-2" style="color: green; font-size: 40px"></i><div>Grup assignat correctament.</div></div>`);
+		    			$('#assignarGrupModalBtns').html(`<button class="reloadBtn btn btn-primary mr-2">Acceptar</button>`);
+		    			
+					})
+					.fail(errorAssignacioGrup);
+		    	e.preventDefault();
+		    });
+
+		    function errorAssignacioGrup() {
+		    	$('#assignarGrupModalMsg').html(`<div class="text-center"><i class="fas fa-exclamation-triangle mb-2" style="color: red; font-size: 40px"></i><div>Error! No ha sigut possible assignar el grup a l'usuari.</div></div>`);
+		    	$('#assignarGrupModalBtns').html(`<button class="reloadBtn btn btn-primary mr-2">Acceptar</button>`);
 		    }
 
 		} );
