--- a/public/css/style.css
+++ b/public/css/style.css
@@ -212,3 +212,17 @@ table.aligncenter .col {
 	width: 100%;
 	padding-top: 15px;
 }
+
+/* AFEGIR BUTTON */
+
+.afegirbtn {
+	margin-top: 15px;
+}
+
+/* LLISTAT ALUMNES ETC */
+
+.elementLlista {
+	width: 100%;
+	display: block;
+	background-color: rgba(0,0,0,0.01);
+}
